<resources>
    <string name="app_name">Instagram</string>
    <string name="main_overview">Overview</string>
    <string name="badiDetails_alertDialogLoadingBadis">Could not load details. Please try later.</string>
    <string name="all_ok">Ok</string>
    <string name="all_error">Error</string>
    <string name="title">Instagram</string>
    <string name="signUp">Sign Up</string>
    <string name="signupText1">Sign up to see photos and videos</string>
    <string name="signupText2">from your friends.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="dontHaveAccount">If you don\'t already got an account klick hier</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_bottom_nav1">BottomNav1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="personalUsername">ssssamiraaa</string>
    <string name="editProfileBnt">edit profile</string>
    <string name="biografieText">Homer Simpson</string>
    <string name="numerPhotos">12</string>
    <string name="numerSubscribers">123</string>
    <string name="numberSubscribed">142</string>
    <string name="photosText">Photos</string>
    <string name="subscribersText">Subscribers</string>
    <string name="subscribedText">subscribed</string>
    <string name="profilBildAendern">Profilbild ändern</string>
    <string name="nameOfUser">Name</string>
    <string name="Biography">Biography</string>
    <string name="EditProfileText">Edit profile</string>
    <string name="Done">Done</string>
    <string name="Cancel">Cancle</string>
    <string name="Next">Next</string>
    <string name="Pictures">Pictures</string>
    <string name="NewPic">Add a new picture!</string>
    <string name="UserProfileName">ssssamirraa</string>
    <string name="BiographyText">Hallo ich bin Samira und habe keine Biografie</string>

</resources>