<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cancel2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:gravity="left"
            android:textAllCaps="false"
            android:text="@string/Cancel"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:textSize="17dp"
            android:text="@string/Pictures"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <Button
            android:id="@+id/done2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:textAllCaps="false"
            android:text="@string/Done"/>



    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageView
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="385dp"
            android:layout_centerInParent="true" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="870dp">

            <Button
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:onClick="open"
                android:text="upload" />

        </android.support.v7.widget.CardView>


    </android.support.v7.widget.CardView>


</LinearLayout>


