<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="230dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/homer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/editProfileButton"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="165dp"
            android:text="@string/profilBildAendern"
            android:textColor="@color/dunkelblau"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:text="@string/nameOfUser" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="40dp">

                <EditText
                    android:id="@+id/nameOfUser"
                    android:layout_width="224dp"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:text="@string/username" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="273dp"
                android:layout_height="40dp">

                <EditText
                    android:id="@+id/usernameEditProfile"
                    android:layout_width="224dp"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="100dp">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="358dp"
                android:layout_height="40dp">

                <EditText
                    android:id="@+id/eMailEditProfile"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="150dp">
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:text="@string/Biography" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="358dp"
                android:layout_height="40dp">

                <EditText
                    android:id="@+id/eMailEditProfile"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
