<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:orientation="vertical">

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/cancel2"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="100dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:gravity="left"
                        android:textAllCaps="false"
                        android:text="@string/Cancel"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:id="@+id/addPicture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:text="@string/Pictures"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/done2"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="100dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:gravity="left"
                        android:textAllCaps="false"
                        android:text="@string/Done"/>


                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>